Ajuste de configuração de build e docker run. Problema na configuração no nome do pacote principal

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ repositories {
 }
 
 dependencies {
+
+	implementation 'org.springframework.boot:spring-boot-starter'
+
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'junit:junit:4.13.1'
 
